# cmake

./: README.md  win32.txt
projeto1/: CMakeLists.txt  README.md  principal.cpp
projeto2/: CMakeLists.txt  README.md
projeto2/fonte/: Aluno.cpp  principal.cpp
projeto3/: CMakeLists.txt  README.md
projeto3/cabecalhos/: Aluno.h
projeto3/fonte/: Aluno.cpp
projeto4/: CMakeLists.txt
projeto5/: CMakeLists.txt  README.md
projeto5/construir/: .ninja_deps  .ninja_log
projeto5/fonte/: Aluno.cpp  principal.cpp
